reflectapi-demo/tests/run/snapshots/run__json.snap
---
source: reflectapi-demo/tests/run/main.rs
expression: pretty
snapshot_kind: text
---
HTTP/1.1 200 OK

content-length: 2
content-type: application/json
traceparent: blah

{}


HTTP/1.1 200 OK

content-length: 209
content-type: application/json
traceparent: blah

{
  "cursor": "255",
  "items": [
    {
      "age": 1,
      "kind": {
        "breed": "labrador",
        "type": "dog"
      },
      "name": "Bobby",
      "updated_at": "2024-01-01T00:00:00Z"
    }
  ]
}
